Fixed viewport on mobile

--- a/order-summary-component/style.scss
+++ b/order-summary-component/style.scss
@@ -1,27 +1,30 @@
 $small: 768px;
 
+html {
+    height: -webkit-fill-available;
+}
+
 body {
     width: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Red Hat Display', sans-serif;
     background-color: hsl(225, 100%, 94%);
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 .wrapper {
 
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     background: url('./images/pattern-background-desktop.svg') center center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
-    @media screen and (max-width: $small) {
-        background: url('./images/pattern-background-mobile.svg') center center no-repeat;
-    }
 
     .card {
 
